Fixed mobile logo and spacing

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -154,8 +154,8 @@ header {
   position: fixed;
   justify-content: center;
   align-items: center;
-  top: -100vh;
-  top: calc(var(--vh, 1vh) * -100);
+  top: -120vh;
+  top: calc(var(--vh, 1vh) * -120);
   left: 0;
   z-index: 4;
   background-color: var(--green);
@@ -265,7 +265,7 @@ header {
 }
 
 .ventures__stats {
-  margin: 80px 0;
+  margin: 80px 0 120px 0;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   gap: 48px;
